--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>InCIte-AI</title>
+		<title>InCite-AI</title>
 	</head>
 	<body style="width: 100vw">
 		<div id="root" style="width: 100%"></div>
